--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -382,17 +382,20 @@
 * Fade In *
 **********/ 
 @-webkit-keyframes fadeIn { 
-    0% {opacity: 0;} 
-    100% {opacity: 1;
+    0% {opacity: 0; visibility: hidden;} 
+    100% {opacity: 1; 
+        visibility: visible;
         display:block;} 
 } 
 @keyframes fadeIn { 
-    0% {opacity: 0;} 
-    100% {opacity: 1;
+    0% {opacity: 0; visibility: hidden;} 
+    100% {opacity: 1; 
+        visibility: visible;
         display:block;} 
 }
 .fadeIn{
     opacity:0;
+    visibility: hidden;
 }
 .fadeIn.go { 
     -webkit-animation-name: fadeIn; 
